# Odibi

./: $null  .clinerules  .continuerc.json  .cw_session_state.json  .flake8  .gitignore  .pre-commit-config.yaml  .ruffignore  404.html  =3.0  AGENTS.md  AGENT_MIGRATION_GUIDE.md  BUGS.md  CACHE_INVALIDATION_AUDIT.md  CHANGELOG.md  CHEME_COURSE_COMPLETE.md  CHEME_LESSONS_FIXED_SUMMARY.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_CLEANUP_SUMMARY.md  FOLDER_AUDIT.md  GAPS.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  IP_NOTICE.md  IP_PROTECTION_CHECKLIST.md  LICENSE  LINK_VERIFICATION.md  MANIFEST.in  MCP_CHECKLIST.md  NEXT_SESSION_PROMPT.md  PERFORMANCE_FIXES_SUMMARY.md  PHASE2B_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  (+75 more)
odibi_mcp/: .cw_session_state.json  DEPLOYMENT.md  INSTALL.md  README.md  __init__.py  __main__.py  app.yaml  bootstrap.py  context.py  corpus.py  databricks_app.py  dispatcher.py  knowledge.py  mcp_server.py  pyproject.toml  requirements.txt  resources.py  server.py  test_all_tools.py  test_dispatcher.py  test_mcp_server_validation.py  test_server.py  verify_install.py
odibi_mcp/_corpus/: README.md  index.json
odibi_mcp/_corpus/.assistant/: .assistant_instructions.md
odibi_mcp/_corpus/.assistant/skills/pipeline-yaml-authoring/: SKILL.md
odibi_mcp/_corpus/docs/: ODIBI_DEEP_CONTEXT.md  troubleshooting.md
odibi_mcp/_corpus/docs/examples/canonical/: 01_hello_world.md  02_incremental_sql.md  03_scd2_dimension.md  README.md
odibi_mcp/_corpus/docs/features/: alerting.md  cli.md  configuration.md  connections.md  cross_entity_references.md  engines.md  observability.md  orchestration.md  patterns.md  pipelines.md  plugins.md  quarantine.md  schema_tracking.md  state.md  stateful_simulation.md
odibi_mcp/_corpus/docs/guides/: ai-agent-guide.md  api_data_sources.md  best_practices.md  chemical_engineering_simulation_guide.md  custom_functions.md  dimensional_modeling_guide.md  environments.md  explanation_feature.md  faq.md  installation.md  mcp_recipes.md  mcp_system_prompt.md  odibi_for_renewable_energy.md  planning_walkthroughs.md  production_deployment.md  recipes.md  secrets.md  setup_azure.md  simulation.md  the_definitive_guide.md  thermodynamics.md  unit_conversion.md  unity_catalog.md  variable_substitution.md  writing_transformations.md  wsl_setup.md
odibi_mcp/_corpus/docs/patterns/: aggregation.md  anti_patterns.md  date_dimension.md  dimension.md  fact.md  incremental_stateful.md  legacy_hwm_manual.md  merge_upsert.md  skip_if_unchanged.md  windowed_reprocess.md
odibi_mcp/_corpus/docs/reference/: PARITY_TABLE.md  cheatsheet.md  configuration.md  glossary.md  power_user_cheatsheet.md  supported_formats.md
odibi_mcp/_corpus/docs/reference/api/: cli.md  engine.md  patterns.md  validation.md
odibi_mcp/_corpus/docs/simulation/: generators.md  getting_started.md  index.md  patterns.md  process_simulation.md  simulation_playbook.md  stateful_functions.md
odibi_mcp/_corpus/docs/simulation/patterns/: energy_utilities.md  foundations.md
odibi_mcp/_corpus/docs/skills/: 01_think_plan_critique.md  05_pipeline_yaml_authoring.md  11_lessons_learned_protocol.md  12_databricks_notebook_protocol.md
odibi_mcp/_corpus/docs/tutorials/: azure_connections.md  delete_detection.md  delta_troubleshooting.md  getting_started.md  git_and_azure_devops.md  spark_engine.md  validation_pipeline.md
odibi_mcp/_corpus/docs/tutorials/dimensional_modeling/: 02_dimension_pattern.md  03_date_dimension_pattern.md  05_aggregation_pattern.md  06_full_star_schema.md  08_defining_metrics.md  10_querying_metrics.md  11_materializing_metrics.md  12_semantic_full_example.md  13_fk_validation.md
odibi_mcp/_corpus/docs/validation/: contracts.md  tests.md
odibi_mcp/_corpus/examples/: improvement_target.odibi.yaml  openfda_food_recalls.yaml  simulation_example.yaml  starter.odibi.yaml
odibi_mcp/_corpus/examples/cheme_course/L00_setup/: multi_entity.yaml  tank_data.yaml
odibi_mcp/_corpus/examples/cheme_course/L01_cv_mv_dv/: heat_exchanger.yaml  mixing_tank_ph.yaml
odibi_mcp/_corpus/examples/cheme_course/L02_dof_balances/: cstr_energy_balance.yaml  tank_mass_balance.yaml
odibi_mcp/_corpus/examples/cheme_course/L03_first_order/: tank_temperature_fo.yaml
odibi_mcp/_corpus/examples/cheme_course/L05_second_order/: valve_actuator.yaml
odibi_mcp/_corpus/examples/cheme_course/L06_pid_basics/: tank_pi.yaml
odibi_mcp/_corpus/examples/cheme_course/L08_disturbances/: load_disturbance.yaml
odibi_mcp/_corpus/examples/cheme_course/L09_system_id/: step_response.yaml
odibi_mcp/_corpus/examples/chemical_engineering/: cstr_flowsheet_complete.yaml
odibi_mcp/_corpus/examples/phase1/: customer_dimension.yaml  date_dimension.yaml  employee_scd2.yaml  fact_orders.yaml
odibi_mcp/_corpus/examples/renewable_energy/: battery_soc_simulation.yaml  solar_thermal_tracking.yaml
odibi_mcp/_corpus/examples/simulation_patterns/oneshot/: 18_bess.yaml  (+19 more)
odibi_mcp/_corpus/examples/validation_pipeline/: config.yaml
odibi_mcp/_corpus/examples/walkthrough_test/: bronze_production_orders.odibi.yaml
odibi_mcp/access/: context.py  path_validator.py  physical_gate.py
odibi_mcp/audit/: entry.py  logger.py
odibi_mcp/contracts/: access.py  diff.py  discovery.py  enums.py  envelope.py  graph.py  resources.py  schema.py  selectors.py  smart.py  stats.py  time.py
odibi_mcp/discovery/: __init__.py  limits.py
odibi_mcp/fileops/: server.py
odibi_mcp/loaders/: story.py
odibi_mcp/tools/: builder.py  catalog.py  construction.py  diagnose.py  discovery.py  discovery_core_wrapper.py  execute.py  execution.py  guidance.py  lineage.py  phase3_smart.py  profile_cache.py  render.py  sample.py  schema.py  smart.py  story.py  validation.py  workflows.py  yaml_builder.py
odibi_mcp/utils/: __init__.py  errors.py  limiter.py
odibi_mcp/workflow/: __init__.py  server.py
odibi_mcp/workflow/skills/: browsing.md  code-review.md  debugging.md  file-editing.md  odibi-pipeline.md  planning.md  searching.md
(+2379 files in other folders)
