[project]
name = "odibi-mcp"
version = "0.1.0"
description = "MCP server for Odibi knowledge retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "odibi>=3.11.0",  # Main Odibi framework from PyPI
    "fastmcp>=3.0",  # MCP server framework
    "databricks-sdk>=0.23.0",  # Required for Databricks Apps context
    "pint>=0.20.0",  # Required by Odibi, explicitly listed for Databricks Apps
    "uvicorn>=0.30.0",  # ASGI server for HTTP transport
    "starlette>=0.37.0",  # Required by fastmcp for HTTP app
]

[project.optional-dependencies]
rag = [
    "chromadb",
    "sentence-transformers",
]

[project.scripts]
odibi-mcp = "odibi_mcp.mcp_server:main"
odibi-mcp-http = "odibi_mcp.databricks_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
